--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -37,31 +37,32 @@
         <div class="col-md-4 mt-4 mt-sm-0 d-none d-md-block">
           <div class="text-center text-md-end">
             <p class="text-dark border-dark font-weight-bold"
-              > <strong>Last Check : 20:20 pm</strong>  </a>
+              > <strong>Last Check : {{resp_time}}</strong>  </a>
           </div>
         </div>
         <!--end col-->
       </div>
       <!--end row-->
-
+      
       <div class="row">
+        {% for response in api_responses %}
         <div class="col-lg-4 col-md-6 col-12 mt-4 pt-2">
           <div class="card border-0 bg-light rounded shadow">
             <div class="card-body p-4">
               <span
                 class="badge rounded-pill bg-primary float-md-end mb-3 mb-sm-0"
-                >healthy</span
+                >{{response.api_status_text}}</span
               >
-              <h5>User Frontend Service</h5>
+              <h5>{{response.api_name}}</h5>
               <div class="mt-3">
                 <span class="text-muted d-block"
                   ><i class="fa fa-home" aria-hidden="true"></i>
                   <a href="#" target="_blank" class="text-muted"
-                    >Bootdey.com LLC.</a
+                    >{{response.api_url}}.</a
                   ></span
                 >
                 <span class="text-muted d-block"
-                  ><i class="fa fa-map-marker" aria-hidden="true"></i> USA</span
+                  ><i class="fa fa-map-marker" aria-hidden="true"></i> {{response.api_last_status_code}}</span
                 >
               </div>
 
@@ -71,154 +72,12 @@
             </div>
           </div>
         </div>
-        <!--end col-->
-
-        <div class="col-lg-4 col-md-6 col-12 mt-4 pt-2">
-          <div class="card border-0 bg-light rounded shadow">
-            <div class="card-body p-4">
-              <span
-                class="badge rounded-pill bg-primary float-md-end mb-3 mb-sm-0"
-                >healthy</span
-              >
-              <h5>Session Service</h5>
-              <div class="mt-3">
-                <span class="text-muted d-block"
-                  ><i class="fa fa-home" aria-hidden="true"></i>
-                  <a href="#" target="_blank" class="text-muted"
-                    >Bootdey.com LLC.</a
-                  ></span
-                >
-                <span class="text-muted d-block"
-                  ><i class="fa fa-map-marker" aria-hidden="true"></i> USA</span
-                >
-              </div>
-
-              <div class="mt-3">
-                <a href="#" class="btn btn-primary">View Details</a>
-              </div>
-            </div>
-          </div>
-        </div>
-        <!--end col-->
-
-        <div class="col-lg-4 col-md-6 col-12 mt-4 pt-2">
-          <div class="card border-0 bg-light rounded shadow">
-            <div class="card-body p-4">
-              <span
-                class="badge rounded-pill bg-primary float-md-end mb-3 mb-sm-0"
-                >healthy</span
-              >
-              <h5>Backend Service</h5>
-              <div class="mt-3">
-                <span class="text-muted d-block"
-                  ><i class="fa fa-home" aria-hidden="true"></i>
-                  <a href="#" target="_blank" class="text-muted"
-                    >Bootdey.com LLC.</a
-                  ></span
-                >
-                <span class="text-muted d-block"
-                  ><i class="fa fa-map-marker" aria-hidden="true"></i> USA</span
-                >
-              </div>
-
-              <div class="mt-3">
-                <a href="#" class="btn btn-primary">View Details</a>
-              </div>
-            </div>
-          </div>
-        </div>
-        <!--end col-->
-
-        <div class="col-lg-4 col-md-6 col-12 mt-4 pt-2">
-          <div class="card border-0 bg-light rounded shadow">
-            <div class="card-body p-4">
-              <span
-                class="badge rounded-pill bg-primary float-md-end mb-3 mb-sm-0"
-                >healthy</span
-              >
-              <h5>Admin Frontend Service</h5>
-              <div class="mt-3">
-                <span class="text-muted d-block"
-                  ><i class="fa fa-home" aria-hidden="true"></i>
-                  <a href="#" target="_blank" class="text-muted"
-                    >Bootdey.com LLC.</a
-                  ></span
-                >
-                <span class="text-muted d-block"
-                  ><i class="fa fa-map-marker" aria-hidden="true"></i> USA</span
-                >
-              </div>
-
-              <div class="mt-3">
-                <a href="#" class="btn btn-primary">View Details</a>
-              </div>
-            </div>
-          </div>
-        </div>
-        <!--end col-->
-
-        <div class="col-lg-4 col-md-6 col-12 mt-4 pt-2">
-          <div class="card border-0 bg-light rounded shadow">
-            <div class="card-body p-4">
-              <span
-                class="badge rounded-pill bg-primary float-md-end mb-3 mb-sm-0"
-                >healthy</span
-              >
-              <h5>Api Gateway Service</h5>
-              <div class="mt-3">
-                <span class="text-muted d-block"
-                  ><i class="fa fa-home" aria-hidden="true"></i>
-                  <a href="#" target="_blank" class="text-muted"
-                    >Bootdey.com LLC.</a
-                  ></span
-                >
-                <span class="text-muted d-block"
-                  ><i class="fa fa-map-marker" aria-hidden="true"></i> USA</span
-                >
-              </div>
-
-              <div class="mt-3">
-                <a href="#" class="btn btn-primary">View Details</a>
-              </div>
-            </div>
-          </div>
-        </div>
-        <!--end col-->
-
-        <div class="col-lg-4 col-md-6 col-12 mt-4 pt-2">
-          <div class="card border-0 bg-light rounded shadow">
-            <div class="card-body p-4">
-              <span
-                class="badge rounded-pill bg-danger float-md-end mb-3 mb-sm-0"
-                >unhealthy</span
-              >
-              <h5>Database Service</h5>
-              <div class="mt-3">
-                <span class="text-muted d-block"
-                  ><i class="fa fa-home" aria-hidden="true"></i>
-                  <a href="#" target="_blank" class="text-muted"
-                    >Bootdey.com LLC.</a
-                  ></span
-                >
-                <span class="text-muted d-block"
-                  ><i class="fa fa-map-marker" aria-hidden="true"></i> USA</span
-                >
-              </div>
-
-              <div class="mt-3">
-                <a href="#" class="btn btn-danger">View Details</a>
-              </div>
-            </div>
-          </div>
-        </div>
-        <!--end col-->
-
-        <div class="col-12 mt-4 pt-2 d-block d-md-none text-center">
-          <a href="#" class="btn btn-primary"
-            >View more Jobs</a>
-        </div>
-        <!--end col-->
+        {% endfor %}
       </div>
+      
+
+
+      
       <!--end row-->
     </div>
   </body>
