--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -24,11 +24,9 @@
       <div class="row align-items-end mb-4 pb-2">
         <div class="col-md-8">
           <div class="section-title text-center text-md-start">
-            <h2 class="title mb-4">Api Status for {{company_name}}</h2>
+            <h2 class="title mb-4">Api Status for {{title}}</h2>
             <p class="text-muted mb-0 para-desc">
-              Start work with Leaping. Build responsive, mobile-first projects
-              on the web with the world's most popular front-end component
-              library.
+              {{description}}
             </p>
           </div>
         </div>
